--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "1.0.6",
     "@nextui-org/react": "2.2.9",
     "@prisma/client": "^5.16.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "11.2.12",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.3",
